--- a/style/visual.less
+++ b/style/visual.less
@@ -1,3 +1,5 @@
+@import (less) "node_modules/powerbi-visuals-utils-formattingutils/lib/index.css";
+
 p {
     font-size: 20px;
     font-weight: bold;
@@ -7,3 +9,43 @@ p {
         
     }
 }
+
+.tooltiptext {
+    background-color: #2e1d1d;
+    opacity: 0.6;
+    color: #fff;
+    border-radius: 3px;
+    min-height:30px;
+    min-width: 80px;
+    padding:5px;
+    text-align:center;
+    vertical-align: middle;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #2e1d1d transparent transparent transparent;
+  }
+
+  .tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;  
+  }
+
+  .context-menu {
+     list-style-type: none;
+     margin-left: 40px;
+     padding-left: 0;
+     background-color: #f1f1f1;
+  }
+
+  .context-item a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+  }
+
+  .context-item a:hover:not(.active) {
+    background-color: #555;
+    color: white;
+  }
