--- a/style/visual.less
+++ b/style/visual.less
@@ -1,4 +1,9 @@
+@import (less) "node_modules/powerbi-visuals-utils-interactivityutils/lib/index.css";
 @import (less) "node_modules/powerbi-visuals-utils-formattingutils/lib/index.css";
+@import (css) "node_modules/bootstrap/dist/css/bootstrap.css";
+
+@contexeMenuBackground: #f1f1f1;
+@contextItemBackground: #000;
 
 p {
     font-size: 20px;
@@ -12,7 +17,7 @@ p {
 
 .tooltiptext {
     background-color: #2e1d1d;
-    opacity: 0.6;
+    opacity: 0.9;
     color: #fff;
     border-radius: 3px;
     min-height:30px;
@@ -20,7 +25,7 @@ p {
     padding:5px;
     text-align:center;
     vertical-align: middle;
-    border-width: 5px;
+    border-width: 10px;
     border-style: solid;
     border-color: #2e1d1d transparent transparent transparent;
   }
@@ -28,24 +33,86 @@ p {
   .tooltip {
     position: relative;
     display: inline-block;
-    border-bottom: 1px dotted black;  
   }
 
   .context-menu {
      list-style-type: none;
      margin-left: 40px;
      padding-left: 0;
-     background-color: #f1f1f1;
+     background-color: @contexeMenuBackground;
   }
 
-  .context-item a {
+  .context-item {
+    a {
+      display: block;
+      color: #000;
+      padding: 8px 16px;
+      text-decoration: none;
+    }
+    a:hover:not(.active) {
+      background-color: #555;
+      color: white;
+    }
+  }
+
+  .checkbox-container{
     display: block;
-    color: #000;
-    padding: 8px 16px;
-    text-decoration: none;
-  }
+    position: relative;
+    padding-left: 22px;
+    margin-bottom: 5px;
+    cursor: pointer;
+    font-size: 17px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 
-  .context-item a:hover:not(.active) {
-    background-color: #555;
-    color: white;
+    input {
+      position: absolute;
+      opacity: 0;
+      cursor: pointer;
+      height: 0;
+      width: 0;
+    }
+
+    .checkmark {
+      position: absolute;
+      top: 3px;
+      left: 0;
+      height: 15px;
+      width: 15px;
+      background-color: #eee;
+    }
+
+    /* On mouse-over, add a grey background color */
+    :hover input ~ .checkmark {
+      background-color: #ccc;
+    }
+
+    /* When the checkbox is checked, add a blue background */
+    input:checked ~ .checkmark {
+      background-color: rgb(53, 54, 54);
+    }
+
+    .checkmark:after {
+      content: "";
+      position: absolute;
+      display: none;
+    }
+
+    input:checked ~ .checkmark:after {
+      display: block;
+    }
+
+    .checkmark:after {
+      left: 5px;
+      top: 1px;
+      width: 3px;
+      height: 9px;
+      border: solid white;
+      border-width: 0 2px 2px 0;
+      -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+      transform: rotate(45deg);
+    }
   }
