--- a/style/visual.less
+++ b/style/visual.less
@@ -162,6 +162,11 @@ p {
       transform: rotate(45deg);
     }  
 }
+
+.card-header{
+  padding: 0.25rem 0.5rem
+}
+
 .col {
   padding: 0px;
 }
@@ -169,7 +174,9 @@ p {
 .container {
   margin: 0px;
   max-width: 100%;
-  overflow: auto;
+  .col{
+    overflow: auto;
+  }
 }
 
 .list-group-item {
